objects/SFDCDesktopDevelopment__c.object
<CustomObject>
    <label>SFDC Desktop Development</label>
    <nameField>
        <label>SFDC Desktop Development Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SFDC Desktop Developments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Sprint</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project__c</fullName>
        <label>Project</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkItem__c</fullName>
        <label>WorkItem</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ScrumTeam__c</fullName>
        <label>ScrumTeam</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReleaseDate__c</fullName>
        <label>ReleaseDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ReleaseName__c</fullName>
        <label>ReleaseName</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Desktop_Development_Deploy_Status__c</fullName>
        <label>SFDC Desktop Development Deploy Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>